--- a/index.html
+++ b/index.html
@@ -11,14 +11,6 @@
   </style>
 </head>
 <body>
-<p class="p1">&lt;!DOCTYPE html&gt;</p>
-<p class="p1">&lt;html&gt;</p>
-<p class="p1">&lt;head&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;title&gt;&lt;/title&gt;</p>
-<p class="p1">&lt;/head&gt;</p>
-<p class="p1">&lt;body&gt;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>&lt;iframe src="https://www.youtube.com/embed/x_LiQeLuOZ8" frameborder="0" allowfullscreen&gt;&lt;/iframe&gt;</p>
-<p class="p1">&lt;/body&gt;</p>
-<p class="p1">&lt;/html&gt;</p>
+<p class="p1">&lt;iframe src="https://www.youtube.com/embed/x_LiQeLuOZ8" frameborder="0" allowfullscreen&gt;&lt;/</p>
 </body>
 </html>
